--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -129,6 +129,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:contentDescription="@string/delete"
+        android:id="@+id/delete_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_cross_red"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/press_text"
+        app:layout_constraintStart_toEndOf="@id/profilePhotoEdit"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
         android:id="@+id/progress_bar_edit"
         android:layout_width="wrap_content"
