--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,6 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="FieldsThemeUnder21" parent="Theme.AppCompat.DayNight">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
     <style name="FieldsThemeAppCompat" parent="Theme.AppCompat.Light" >
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -15,12 +9,20 @@
         <item name="android:colorBackground">@color/Background_Fields</item>
     </style>
 
-    <style name="FieldsThemeAppCompatNoActionBar" parent="Theme.AppCompat.NoActionBar" >
+    <style name="FieldsThemeAppCompatWelcome" parent="Theme.AppCompat.Light" >
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:colorBackground">@color/Background_Fields</item>
         <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="AppTheme.Launcher" parent="Theme.AppCompat.Light">
+    <item name="android:windowBackground">@drawable/launch_screen</item>
+
+    </style>
+
+
 
 </resources>
