--- a/app/src/main/res/layout/activity_team_chat.xml
+++ b/app/src/main/res/layout/activity_team_chat.xml
@@ -71,23 +71,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
-        <TextView
-            android:id="@+id/level_up_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="32dp"
-            android:gravity="center"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/level_up_text2"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/conversation_picture"
-            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/level_up_text2"
@@ -103,7 +87,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/level_up_text" />
+            app:layout_constraintTop_toBottomOf="@+id/conversation_picture" />
 
         <Button
             android:id="@+id/discover"
