--- a/app/src/main/res/menu/settings_user.xml
+++ b/app/src/main/res/menu/settings_user.xml
@@ -6,6 +6,14 @@
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings"
         android:id="@+id/settings_user"
-        android:showAsAction="always"
+        app:showAsAction="never"
+
         />
+    <!--
+         Hahahahhaha Ermir lost
+         21.5.2018 English class
+         never forget the pun master
+         -->
+
+
 </menu>
