--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -42,7 +42,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:elevation="6dp"
-                android:src="@drawable/team_basic" />
+                android:src="@drawable/team_default" />
 
         </FrameLayout>
 
