--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -90,7 +90,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:src="@drawable/profileim"
+                android:src="@drawable/profile_default"
                 android:visibility="visible" />
         </FrameLayout>
 
