before alpha launch

--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -225,9 +225,9 @@
 
         <ImageView
             android:id="@+id/sad_face"
-            android:layout_width="118dp"
-            android:layout_height="108dp"
-            android:src="@drawable/sad_face"
+            android:layout_width="88dp"
+            android:layout_height="77dp"
+            android:src="@drawable/group_icon_big"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
