--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
         <item>@color/dot_active_screen1</item>
         <item>@color/dot_active_screen2</item>
         <item>@color/dot_active_screen3</item>
+        <item>@color/dot_active_screen2</item>
         <item>@color/dot_active_screen1</item>
 
     </array>
@@ -39,6 +40,7 @@
         <item>@color/dot_inactive_screen1</item>
         <item>@color/dot_inactive_screen2</item>
         <item>@color/dot_inactive_screen3</item>
+        <item>@color/dot_inactive_screen2</item>
         <item>@color/dot_inactive_screen1</item>
 
     </array>
