--- a/app/src/main/res/layout/activity_all_trainings.xml
+++ b/app/src/main/res/layout/activity_all_trainings.xml
@@ -15,6 +15,20 @@
 
    </com.fields.curiumx.fields.EmptyRecyclerView>
 
+    <TextView
+        android:id="@+id/empty_view_trainings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:text="@string/no_trainings"
+
+        />
+
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/no_fields_plus_constraint_training"
