--- a/app/src/main/res/layout/welcome_slide_4.xml
+++ b/app/src/main/res/layout/welcome_slide_4.xml
@@ -2,35 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/white"
+    android:id="@+id/last"
+    >
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slide_4_title"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
             android:layout_marginBottom="@dimen/slide_title"
+            android:text="@string/slide_4_title"
+            android:textColor="@color/light_text"
+            android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
+
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/arrows_art" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_4_desc"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
+            android:src="@drawable/fields_logo_green" />
+
+        <Button
+            android:id="@+id/get_started_button"
+            android:layout_width="150dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/lets_get_started"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
     </LinearLayout>
 </RelativeLayout>
