--- a/app/src/main/res/layout/activity_create_new_team.xml
+++ b/app/src/main/res/layout/activity_create_new_team.xml
@@ -126,7 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/fields_button_states"
+        android:backgroundTint="@color/colorPrimary"
         android:text="@string/create_team"
         android:textAllCaps="false"/>
 
