--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -135,7 +135,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/fields_button_states"
+        android:backgroundTint="@color/colorPrimary"
         android:textAllCaps="false"
         android:text="@string/fui_button_text_save"/>
 
