--- a/app/src/main/res/layout/activity_fields_plus_start.xml
+++ b/app/src/main/res/layout/activity_fields_plus_start.xml
@@ -23,6 +23,7 @@
         app:layout_constraintBottom_toTopOf="@id/fields_plus_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:textSize="18sp"
@@ -129,6 +130,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:background="@drawable/rounded_view_blue"
         android:backgroundTint="@color/premium_blue"
         android:padding="20dp"
         android:text="@string/try_for_free"
