--- a/app/src/main/res/layout/activity_search_field_only.xml
+++ b/app/src/main/res/layout/activity_search_field_only.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".SearchFieldOnlyActivity">
 
+    <TextView
+        android:id="@+id/start_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="@string/start_training_by"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        />
+
     <SearchView
 
         android:id="@+id/search1"
@@ -20,7 +33,7 @@
         android:elevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/start_text"
         />
 
     <com.fields.curiumx.fields.EmptyRecyclerView
@@ -89,6 +102,30 @@
             />
 
 
+
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/add_new_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:textAllCaps="false"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:backgroundTint="@color/colorPrimary"
+        android:elevation="1dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/not_finding_field"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"/>
 
 </android.support.constraint.ConstraintLayout>
