added expanding images

--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -276,6 +276,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <ImageView
+        android:id="@+id/expanded_field_image"
+        android:elevation="10dp"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"/>
+
+
 
 
 
