--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -52,6 +52,22 @@
         android:background="@color/DividerColor"
         app:layout_constraintTop_toBottomOf="@id/privacy_policy_tab" />
 
+    <TextView
+        android:id="@+id/data_collection_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/data_collection"
+        android:textSize="20sp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/privacy_policy_tab"
+        />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintTop_toBottomOf="@id/data_collection_tab" />
+
     <Button
         android:textAllCaps="false"
         android:id="@+id/logoutButton"
